# Adaptive-Dual-Contouring-over-Uniform-Leaf

./: CMakeLists.txt  Readme.md  visualize_mesh.py
include/: functions.h  generation.h  octree.h  tables.h  vec3.h
src/: functions.cpp  generation.cpp  octree.cpp  tables.cpp  vec3.cpp
tests/: test_dual_contouring.cpp
